<resources>
    <string name="app_name">WearLink</string>
    <string name="tab_health">Health</string>
    <string name="tab_sports">Sports</string>
    <string name="tab_device">Device</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_mine">Mine</string>
    <string name="search_phone">Device is searching the phone&#8230;</string>
    <string name="close_play">Stop Play</string>
    <string name="status_loading">Loading&#8230;</string>
    <string name="status_load_complete">Click to load more</string>
    <string name="status_load_end">No more data</string>
    <string name="status_load_failed">Failed to load, click me to try again</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="add_device">Add Device</string>
    <string name="sports_settings">Sports Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_type_day">Day</string>
    <string name="calendar_type_week">Week</string>
    <string name="calendar_type_month">Month</string>
    <string name="calendar_type_year">Year</string>
    <string name="blood_oxygen_saturation">Blood oxygen saturation</string>
    <string name="movement_record">Movement record</string>
    <string name="empty_record">No record</string>
    <string name="heart_rate">Heart rate</string>
    <string name="sleep">Sleep</string>
    <string name="today_empty_data">No data available today</string>
    <string name="weight">Weight</string>
    <string name="pressure">Pressure</string>
    <string name="kilogram">kg</string>
    <string name="distance_km">Distance (km)</string>
    <string name="distance_mile">Distance (mile)</string>
    <string name="climbing_stairs_m">Climbing stairs (m)</string>
    <string name="climbing_stairs_foot">Climbing stairs (foot)</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="step">Steps</string>
    <string name="step_number">Step number</string>
    <string name="medium_high_strength">Medium high strength</string>
    <string name="min">Min</string>
    <string name="heart_rate_range">Heart rate range</string>
    <string name="times_per_minute">Times/min</string>
    <string name="resting_heart_rate">Resting heart rate</string>
    <string name="resting_heart_rate_avg">Average resting heart</string>
    <string name="static_heart_rate_too_high">Static heart rate too high</string>
    <string name="low_resting_heart_rate">Low resting heart rate</string>
    <string name="average_step">Average steps</string>
    <string name="all_step">Total steps</string>
    <string name="all_mile">Total mileage</string>
    <string name="all_consumption">Total consumption</string>
    <string name="weight_setting">Weight setting</string>
    <string name="kilocalorie">Kilocalorie</string>
    <string name="kilometre">Kilometre</string>
    <string name="status_connecting">connecting</string>
    <string name="weight_target">Weight target</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="weekly_average">Weekly average</string>
    <string name="range_of_variation">Range of variation</string>
    <string name="weight_start_data">start：%.1f </string>
    <string name="weight_target_data">target：%.1f </string>
    <string name="kg">kg</string>
    <string name="daily_average">Avg</string>
    <string name="month_average">Monthly average</string>
    <string name="year_average">Year average</string>
    <string name="sober">Awake</string>
    <string name="rapid_eye_movement">REM sleep</string>
    <string name="light_sleep">Light sleep</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="uptilted">Uptilted</string>
    <string name="medium">Medium</string>
    <string name="normal">Normal</string>
    <string name="login">Login</string>
    <string name="hint_input_phone_number_or_email">Enter your phone number or email</string>
    <string name="hint_input_phone_number">Enter your phone number</string>
    <string name="hint_input_password">Enter the password</string>
    <string name="login_by_sms">Login via SMS</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_tips">No account? Sign up now</string>
    <string name="phone_or_email_tips_empty">Phone number or email cannot be blank</string>
    <string name="phone_or_email_tips_format_err">The format of the phone number or email is not correct</string>
    <string name="phone_tips_empty">Phone number cannot be blank</string>
    <string name="phone_tips_format_err">The format of the phone number is not correct</string>
    <string name="email_address_tips_empty">Email address cannot be blank</string>
    <string name="email_address_tips_format_err">The format of the email address is not correct</string>
    <string name="password_tips_empty">Password cannot be blank</string>
    <string name="password_tips_format_err">Password length should be 6&#8211;12 characters</string>
    <string name="register_succeed">register succeed!</string>
    <string name="login_by_account">Login By Account</string>
    <string name="search">Search</string>
    <string name="account_security">Account number and security</string>
    <string name="modify_phone_number">Change mobile phone number</string>
    <string name="modify_email_address">Change email</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="bind_new_phone_number">Bind new mobile phone number</string>
    <string name="bind_new_email_address">Bind new email address</string>
    <string name="modify_binded_phone_number">Change the bound mobile phone number?</string>
    <string name="current_binded_phone_number">Currently bound mobile phone number is</string>
    <string name="modify_binded_email_address">Change the bound email address?</string>
    <string name="current_binded_email_address">Currently bound email address is</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_tip">To confirm that it is your own operation, please authenticate.</string>
    <string name="sms_verification_code">SMS verification code</string>
    <string name="bind_new_phone_number_success">The new mobile phone number is bound successfully!</string>
    <string name="bind_new_email_address_success">The new email address is bound successfully!</string>
    <string name="modified_success">Modified successfully</string>
    <string name="old_password">Old password</string>
    <string name="input_old_password">Enter old password</string>
    <string name="new_password">New password</string>
    <string name="password_input_tip">Please set a new password of 6&#8211;12 characters</string>
    <string name="inout_new_password">Enter a new password</string>
    <string name="inout_new_password_again">Enter the new password again</string>
    <string name="password_is_inconsistent">The password is inconsistent, please re-enter</string>
    <string name="phone_number_is_empty">Mobile phone number cannot be empty</string>
    <string name="sms_verification_code_error">SMS verification code error</string>
    <string name="current_phone_registered">The current mobile phone has been registered</string>
    <string name="current_phone_no_register">The current account is not registered</string>
    <string name="account_password_error">Account password error</string>
    <string name="new_password_no_be_empty">New password cannot be empty</string>
    <string name="old_password_error">Old password error</string>
    <string name="register">Register</string>
    <string name="input_verification_code">Input sms code</string>
    <string name="send_sms_code">Send sms code</string>
    <string name="resend_sms_code">Regain sms code(%1$s)</string>
    <string name="input_identifying_code">Input code</string>
    <string name="send_identifying_code">Send code</string>
    <string name="resend_identifying_code">Regain code(%1$s)</string>
    <string name="input_password_tips">Please enter 6&#8211;12 characters</string>
    <string name="sms_code_tips_empty">Sms code cannot be blank</string>
    <string name="sms_code_tips_format_err">Sms code length should be 6 numbers</string>
    <string name="identifying_code_tips_empty">Identifying code cannot be blank</string>
    <string name="identifying_code_tips_format_err">Identifying code length should be 8 numbers</string>
    <string name="hint_input_email">Enter your email address</string>
    <string name="input_user_msg">Input user message</string>
    <string name="nickname">Nickname</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="stature">Stature</string>
    <string name="sport_target">Sport target</string>
    <string name="next_step">Next step</string>
    <string name="skip_progress">Skip</string>
    <string name="please_input">Please input</string>
    <string name="please_choose">Please choose</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="hour">Hour</string>
    <string name="minute">Min</string>
    <string name="score">Score</string>
    <string name="open_gpg_tip">Application requires GPS function, please open the location service to continue.</string>
    <string name="permissions_tips_01">In order to use the software normally, please </string>
    <string name="permission_contacts">Allow read and write contacts</string>
    <string name="permission_mic">Allow microphone</string>
    <string name="permission_read_phone_state">Allow to read mobile phone information</string>
    <string name="permission_location">Allow location information</string>
    <string name="permission_storage">Allow files to read and write</string>
    <string name="permission_bluetooth">Allow Bluetooth</string>
    <string name="permission_phone_settings">Allow to modify phone settings</string>
    <string name="permissions_tips_02">Please go to system settings grant app</string>
    <string name="permission">permission</string>
    <string name="permission_sport">Motion permission setting</string>
    <string name="permission_sport_tips">Due to power saving settings and background process restrictions, Android may close the %1$s recording sports or cause some sports recording data to be missing. If you encounter relevant problems, you can refer to the following methods.</string>
    <string name="permission_sport_suspension_title">Display (suspended window) settings on other applications</string>
    <string name="permission_sport_suspension_describe">In order to ensure that you will not be killed by the mobile phone system during exercise, resulting in the loss of exercise data, please grant the %1$s floating window permission</string>
    <string name="sure">Confirm</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="empty_date">-/-</string>
    <string name="fall_response_way">Fall response method</string>
    <string name="response_mode_bright">Bright screen</string>
    <string name="response_mode_shake">Shake</string>
    <string name="response_mode_call">Phone call</string>
    <string name="emergency_contact">Emergency contacts</string>
    <string name="tip_emergency_contact">Automatically call emergency contacts when falling</string>
    <string name="no_setting">Not set</string>
    <string name="go_setting">go setting</string>
    <string name="no_movement">No movement</string>
    <string name="open_gps_permission">Open location permission</string>
    <string name="permission_describe_gps_permission_sport">To use the motion track and map related functions, please authorize "device location information" to avoid affecting the use.</string>
    <string name="keep_moving">Keep moving</string>
    <string name="detach">remove</string>
</resources>