<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <include
            android:id="@+id/view_topbar"
            layout="@layout/view_topbar" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sw_fall_detection"
            style="@style/swStyle"

            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/textRegular"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_color"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/fall_response_way"
        android:textColor="@color/text_important_color"
        android:textSize="@dimen/text_14sp" />


    <TextView
        android:id="@+id/tv_mode_bright"
        style="@style/textRegular"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_choose_blue"
        android:drawableBottom="@drawable/line_gray_1dp"
        android:gravity="center_vertical"
        android:text="@string/response_mode_bright"
        android:textColor="@color/text_important_color"
        android:textSize="@dimen/text_15sp" />


    <TextView
        android:id="@+id/tv_mode_shake"
        style="@style/textRegular"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableBottom="@drawable/line_gray_1dp"
        android:gravity="center_vertical"
        android:text="@string/response_mode_shake"
        android:textColor="@color/text_important_color"
        android:textSize="@dimen/text_15sp" />


    <TextView
        android:id="@+id/tv_mode_call"
        style="@style/textRegular"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/response_mode_call"
        android:textColor="@color/text_important_color"
        android:textSize="@dimen/text_15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"

        android:background="@color/line_color" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_emergency_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_emergency_contact_title"
            style="@style/textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact"
            android:textColor="@color/text_important_color"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            style="@style/textRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/tip_emergency_contact"
            android:textColor="@color/text_secondary_disable_color"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_emergency_contact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_emergency_contact_title" />


        <TextView
            android:id="@+id/tv_emergency_contact"
            style="@style/textRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/no_setting"
            android:textColor="@color/text_secondary_disable_color"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color" />

</LinearLayout>