<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/cl_register_topbar"
        layout="@layout/view_topbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_old_password_tip"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/bg_color"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/old_password"
        android:textColor="@color/text_secondary_color"
        android:textSize="@dimen/text_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_register_topbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_old"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/text_secondary_disable_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_old_password_tip"
        app:passwordToggleDrawable="@drawable/btn_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_old"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_14sp"
            android:layout_height="wrap_content"
            android:background="@color/text_transparent"
            android:hint="@string/input_old_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_old">

        <TextView
            android:id="@+id/tv_new_password_tip"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:text="@string/new_password"
            android:textColor="@color/text_secondary_color"
            android:textSize="@dimen/text_15sp" />

        <TextView
            android:id="@+id/tv_new_password_rule"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/password_input_tip"
            android:textColor="@color/text_secondary_disable_color"
            android:textSize="@dimen/text_12sp"
             />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_new"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/text_secondary_disable_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_new_password"
        app:passwordToggleDrawable="@drawable/btn_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14sp"
            android:background="@color/text_transparent"
            android:hint="@string/inout_new_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@+id/til_password_new" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_new_reconfirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/text_secondary_disable_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_new"
        app:passwordToggleDrawable="@drawable/btn_password_selector"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_new_reconfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/text_14sp"
            android:background="@color/text_transparent"
            android:hint="@string/inout_new_password_again"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_new_reconfirm" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/auxiliary_error"
        android:textSize="@dimen/text_12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_new_reconfirm"
        tools:text="@string/password_is_inconsistent" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/auxiliary_widget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_new_reconfirm" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/bg_btn_white_shape"
        android:text="@string/sure"
        android:enabled="false"
        android:textColor="@color/btn_gray_to_blue_selector"
        android:textSize="@dimen/text_15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>