<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/bg_health_item_shape">

    <ImageView
        android:id="@+id/iv_health_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_health_movement_record" />

    <TextView
        android:id="@+id/tv_health_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/movement_record"
        android:textColor="@color/black_242424"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_health_logo"
        app:layout_constraintStart_toEndOf="@+id/iv_health_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_health_logo" />

    <TextView
        android:id="@+id/tv_health_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/empty_date"
        android:textColor="@color/gray_AEAEAE"
        app:layout_constraintBottom_toBottomOf="@+id/iv_health_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_health_logo" />

    <TextView
        android:id="@+id/tv_health_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/empty_record"
        android:textColor="@color/black_242424"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iv_health_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_health_logo"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tv_health_type"
        app:layout_constraintTop_toBottomOf="@id/tv_health_type"
        tools:text="26.74" />

    <TextView
        android:id="@+id/tv_distance_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_12sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/gray_9E9E9E"
        app:layout_constraintStart_toEndOf="@id/tv_distance"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_distance"
        android:visibility="gone"
        android:text="@string/kilometre" />
</androidx.constraintlayout.widget.ConstraintLayout>